fixed hero-alignment

--- a/style.css
+++ b/style.css
@@ -36,9 +36,7 @@ p, ul {color: var(--clr-dark-90);}
   font-size: 2rem;
   margin-bottom: .5rem;
 }
-.lead {
-  margin-bottom: 1rem;
-}
+.lead {margin-bottom: 1rem;}
 .lead-lg {
   line-height: 1.5;
   font-size: 1.12rem;
@@ -75,12 +73,14 @@ p, ul {color: var(--clr-dark-90);}
 
 /* ## hero-sect */
 .hero-sect {
-  margin: 1rem;
+  max-width: 1140px;
+  margin: 0 auto;
 }
-.hero-sect .container {
+.hero-sect .container-inner {
   background: linear-gradient(180deg, rgba(19, 19, 24, 0.80), rgba(19, 19, 24, 0.00)), url('./images/lake.png') no-repeat center/cover;
   color: white;
   padding: 5rem 1rem;
+  margin: 0 1rem;
   border-radius: var(--radius);
 }
 .hero-sect .content {
